--- a/css/estilo.css
+++ b/css/estilo.css
@@ -25,7 +25,10 @@ body{
 	margin: 0;
 	padding: 0;
 }
-
+.centro{
+	text-align: center;
+	vertical-align: text-top;
+}
 .item-centro{
 	display: block;
 	margin-bottom: 10px;
