--- a/css/estilo.css
+++ b/css/estilo.css
@@ -67,15 +67,13 @@ textarea{
 }
 .tb{
 	background-color: whitesmoke;
-	color: white;
 	width: 280px;
 	min-height: 100px;
-	margin-left: auto;
-	margin-right: auto;
-	margin-top: 20px;
-	margin-bottom: 60px;
+	margin: 20px 10px 50px 10px;
 	overflow: hidden;
 	word-wrap: break-word;
+	border-radius: 10px;
+	padding: 10px;
 }
 td{
 	text-align:center;
@@ -91,4 +89,7 @@ h1{
 	word-wrap: break-word;
 	text-align: justify;
 	margin: auto;
+}
+.disp{
+	display: inline-block;
 }
