--- a/css/estilo.css
+++ b/css/estilo.css
@@ -27,7 +27,6 @@ body{
 }
 .centro{
 	text-align: center;
-	vertical-align: text-top;
 }
 .item-centro{
 	display: block;
@@ -57,7 +56,9 @@ textarea{
 }
 .bord-r{
 	border-right: 1px solid black;
-	width: 20%;
+}
+.coluna_p{
+	width: 80px;
 }
 .bord-b{
 	border-bottom: 1px solid black;
@@ -80,6 +81,12 @@ td{
 }
 h1{
 	text-shadow: 0px 2px 4px white;
+}
+.h6{
+	font-weight: bold;
+}
+th.sp{
+	padding: 0px 4px;
 }
 .span{
 	font-style: oblique;
